# ChangeLog for app-text/dvipdfm
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/dvipdfm/ChangeLog,v 1.28 2008/05/12 20:19:54 nixnut Exp $

  12 May 2008; nixnut <nixnut@gentoo.org> dvipdfm-0.13.2d-r1.ebuild:
  Stable on ppc wrt bug 220651

  16 Apr 2008; Peter Volkov <pva@gentoo.org> dvipdfm-0.13.2d-r1.ebuild:
  amd64 stable, bug #215735.

  08 Apr 2008; Raúl Porcel <armin76@gentoo.org> dvipdfm-0.13.2d-r1.ebuild:
  alpha/ia64/sparc stable wrt #215735

  08 Apr 2008; Jeroen Roovers <jer@gentoo.org> dvipdfm-0.13.2d-r1.ebuild:
  Stable for HPPA (bug #215735).

  06 Apr 2008; Markus Rothe <corsair@gentoo.org> dvipdfm-0.13.2d-r1.ebuild:
  Stable on ppc64; bug #215735

  01 Apr 2008; Christian Faulhammer <opfer@gentoo.org>
  dvipdfm-0.13.2d-r1.ebuild:
  stable x86, bug 215735

  10 Feb 2008; Alexis Ballier <aballier@gentoo.org>
  dvipdfm-0.13.2d-r1.ebuild:
  keyword ~x86-fbsd

  18 Dec 2007; Jeroen Roovers <jer@gentoo.org> dvipdfm-0.13.2d-r1.ebuild:
  Marked ~hppa (bug #195815).

  11 Dec 2007; Alexis Ballier <aballier@gentoo.org> dvipdfm-0.13.2c.ebuild,
  dvipdfm-0.13.2d.ebuild, dvipdfm-0.13.2d-r1.ebuild:
  remove cstetex references, its being removed, part of bug #196673

*dvipdfm-0.13.2d-r1 (02 Dec 2007)

  02 Dec 2007; Alexis Ballier <aballier@gentoo.org>
  +dvipdfm-0.13.2d-r1.ebuild:
  install .map and .enc files to correct locations, thanks to Jie Luo
  <clotho67@gmail.com>, bug #200956

  25 Oct 2007; Raúl Porcel <armin76@gentoo.org> dvipdfm-0.13.2d.ebuild:
  Add ~alpha/~ia64 wrt #195815

  25 Oct 2007; Markus Rothe <corsair@gentoo.org> dvipdfm-0.13.2d.ebuild:
  Added ~ppc64

  14 Oct 2007; Alexis Ballier <aballier@gentoo.org> dvipdfm-0.13.2c.ebuild:
  quote variables, fix header date, thanks repoman

*dvipdfm-0.13.2d (14 Oct 2007)

  14 Oct 2007; Alexis Ballier <aballier@gentoo.org> +dvipdfm-0.13.2d.ebuild: