@@ -1,8 +1,14 @@
-AUX README.Gentoo 506 RMD160 a2e1b43b9cbae75013779601aa411ac0fbc2f3b9 SHA1 6fe9cd79c6aebeb88b3b4f8c5e0bc8579273034b SHA256 4910a62a65c675fa1d9a91d4d559324971e78af92f54de463feacf15c7183b39
-DIST dvipdfm-0.13.2c.tar.gz 216663 RMD160 699823a43dad3c4f50b25bcacbc6f9d2c9ce5f89 SHA1 38a80bc4d213fd15dc53f7c3a2a309acddc26e08 SHA256 2fa9be11385db74776f7ba229ec55ad558909b5e64fee49327486f9b07c5985c
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST dvipdfm-0.13.2d.tar.gz 236898 RMD160 b167399ceabb6f87f8d2da467f66e8fed3ff9268 SHA1 cb0cfac75efe0e3db6182ca3f1250f1e96838537 SHA256 fc21d4ef316fdd28cce7ce64a9ed3d2254ea1969380a5f52d131ec61d5fb73bc
-EBUILD dvipdfm-0.13.2c.ebuild 975 RMD160 7fbb460eef4a854c9860f5cb7d351103b97619e6 SHA1 5ad24645b5857f5d78f6c49c7f66299d60adeb74 SHA256 778c376b1f297bfa60f881740bdd685f775c181fae1d28f45c6e7aabdcd9aec6
 EBUILD dvipdfm-0.13.2d-r1.ebuild 1451 RMD160 ca933e9af05f3fb103c9bc36e77d0c0ca54ea6cf SHA1 5dcb8a2b0e6b7d70c9cf7d2fe77da049b3e69af8 SHA256 6dada26ed0705d04125d53ecfdd6b9c9881603cdbdb68d0bc469d6c117d3c79c
-EBUILD dvipdfm-0.13.2d.ebuild 963 RMD160 096d74c3b8276f293578d345b1dc8446d30c76b0 SHA1 20e3d6ada55771186a8e3bec51417c6389165d9d SHA256 9078eddefdd2391a1cf48bd9bb2e7ad1c1bb2a66725c36a622e92d3e1df828c7
-MISC ChangeLog 3386 RMD160 677e253c3ccf0cab27298beb457d8d63c0824811 SHA1 cdf6f2f424e361b79a5fadafa0707909fd6f9ec1 SHA256 14983d28833ede8f4ab08c0a6da773391a0675c43f24720b4d4a77491f31ff31
+MISC ChangeLog 3528 RMD160 fb7b614eb3dec2e8ac0c8f17aac1c88ec4c5c8bd SHA1 a1f03cafcedc4370ec39b9f13cded58273248a7a SHA256 e8a3ea7744669f48cdb77d7ab94bb84d4c773ceba5c893403b9f074412f3ca7c
 MISC metadata.xml 156 RMD160 2bf6b2ed9ff0fcef1e902cf093ccf4ae2dcc70a0 SHA1 e9260cd53905d8569cf3327ded4c6d01653fc389 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkhGjYsACgkQvFcC4BYPU0rD+QCffNe+BwCZO9/e/gFCRsP0HmUP
+PtoAoKI6M/YI/d7d3eMXZy61gXOi9ZoZ
+=2GEI
+-----END PGP SIGNATURE-----
