@@ -1,15 +1,0 @@
-
-README.Gentoo
-
-23 Apr 2002; Matthew Kennedy <mkennedy@gentoo.org>
-
-As per the documentation in INSTALL, you must replace your tetex's
-dvipdfm.def (/usr/share/texmf/tex/latex/graphics/dvipdfm.def) with the
-latest version of dvipdfm.def contained in this package
-(/usr/share/doc/dvipdfm-*/dvipdfm.def).
-
-You must then run 'mktexlsr' to update your tetex installation.
-
-See /usr/share/doc/dvipdfm-*/README.Gentoo.gz to see this message
-again. Refer to /usr/share/doc/dvipdfm-*/INSTALL for more information.
-
