@@ -1,6 +1,10 @@
 # ChangeLog for app-text/dvipdfm
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/dvipdfm/ChangeLog,v 1.28 2008/05/12 20:19:54 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/dvipdfm/ChangeLog,v 1.29 2008/06/04 12:41:41 aballier Exp $
+
+  04 Jun 2008; Alexis Ballier <aballier@gentoo.org> -files/README.Gentoo,
+  -dvipdfm-0.13.2c.ebuild, -dvipdfm-0.13.2d.ebuild:
+  remove old
 
   12 May 2008; nixnut <nixnut@gentoo.org> dvipdfm-0.13.2d-r1.ebuild:
   Stable on ppc wrt bug 220651
